force-app/main/default/objects/Platform_Usages__e/Platform_Usages__e.object-meta.xml
<CustomObject>
    <description>CloudEvents-compliant platform event for Usage record lifecycle observability via Dynatrace Salesforce Insights. HighVolume chosen to match org pattern and avoid StandardVolume daily limits. Published on Usage__c after insert and after update.</description>
    <label>Platform Usages</label>
    <pluralLabel>Platform Usages</pluralLabel>
</CustomObject>