force-app/main/default/objects/Platform_Usages__e/fields/data__c.field-meta.xml
<CustomField>
    <fullName>data__c</fullName>
    <description>CloudEvents: JSON-serialised snapshot of the full Usage__c record (JSON.serialize(usage)). Carries the event payload; CloudEvents envelope fields carry the metadata.</description>
    <label>Event Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>