force-app/main/default/objects/Platform_Usages__e/fields/datacontenttype__c.field-meta.xml
<CustomField>
    <fullName>datacontenttype__c</fullName>
    <description>CloudEvents: MIME type of the data field (e.g. application/json).</description>
    <label>Data Content Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>