force-app/main/default/objects/Platform_Usages__e/fields/parentid__c.field-meta.xml
<CustomField>
    <fullName>parentid__c</fullName>
    <description>Salesforce ID of a parent record related to this event. Length 18 matches exact Salesforce ID length.</description>
    <label>Parent ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>