force-app/main/default/objects/Platform_Usages__e/fields/traceid__c.field-meta.xml
<CustomField>
    <fullName>traceid__c</fullName>
    <description>W3C TraceContext: 32-character hex trace ID identifying the distributed trace. Length corrected from 255 to 32 to match the W3C spec exactly.</description>
    <label>Trace ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>