force-app/main/default/objects/Platform_Usages__e/fields/tracestate__c.field-meta.xml
<CustomField>
    <fullName>tracestate__c</fullName>
    <description>W3C TraceContext: Vendor-specific trace state information for propagating distributed trace context.</description>
    <label>Trace State</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>